--- a/css/sheet.css
+++ b/css/sheet.css
@@ -1,3 +1,8 @@
+li a 
+{
+	font-size: 17px;
+	color: white;
+}
 body
 {
 	background-color: #000000;
@@ -68,3 +73,12 @@ p#text1
 	text-align: center;
 	font-size: 50px;
 }
+#subh
+{
+	font-size: 5px;
+}
+
+ /* O - Original
+ 	A - Avid
+ 	K - Kind
+*/
