--- a/css/sheet.css
+++ b/css/sheet.css
@@ -1,8 +1,3 @@
-li a 
-{
-	font-size: 17px;
-	color: white;
-}
 body
 {
 	background-color: #000000;
@@ -77,7 +72,11 @@ p#text1
 {
 	font-size: 5px;
 }
-
+p#she
+{
+	font-size: 12px;
+	color: white;
+}
  /* O - Original
  	A - Avid
  	K - Kind
