--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -910,7 +910,7 @@ textarea {
   line-height: inherit;
 }
 a {
-  color: #CCCCCC;
+  color: #428bca;
   text-decoration: none;
 }
 a:hover,
@@ -3623,7 +3623,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .nav-tabs > li {
   float: left;
-  margin-bottom: 1px;
+  margin-bottom: -1px;
 }
 .nav-tabs > li > a {
   margin-right: 2px;
@@ -3770,10 +3770,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   position: relative;
   min-height: 50px;
   margin-bottom: 20px;
+  border: 1px solid transparent;
 }
 @media (min-width: 768px) {
   .navbar {
-    
+    border-radius: 4px;
   }
 }
 @media (min-width: 768px) {
@@ -3782,7 +3783,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-collapse {
- 
+  padding-right: 15px;
+  padding-left: 15px;
   overflow-x: visible;
   -webkit-overflow-scrolling: touch;
   border-top: 1px solid transparent;
@@ -4091,6 +4093,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar-default {
   background-color: #f8f8f8;
+  border-color: #e7e7e7;
 }
 .navbar-default .navbar-brand {
   color: #777;
