--- a/css/sheet.css
+++ b/css/sheet.css
@@ -66,7 +66,14 @@ a.socialIcons:hover
 {
 	color: white;
 }
-
+.navbar-default .navbar-nav > li > a
+{
+	color: white;
+}
+#conte p
+{
+	color: white;
+}
  /* O - Original
  	A - Avid
  	K - Kind
